# Conference__Platform

./: .dockerignore  .gitignore  Dockerfile  README.md  logs.txt  nginx.conf  pyproject.toml  test.db
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  auth.py  conferences.py  files.py  roles.py  search.py  submissions.py  (+1 more)
app/core/: config.py  security.py
app/models/: __init__.py  conference.py  conference_group.py  group.py  group_member.py  role.py  submission.py  submission_author.py  submission_file.py  user.py  user_role.py  validation_report.py
app/schemas/: auth.py  conference.py  file.py  role.py  submission.py
app/scripts/: reindex.py
app/services/: auth_service.py  collection_generator.py  conference_service.py  program_generator.py  role_service.py  search_service.py  storage.py  submission_file_service.py  submission_service.py  validation_service.py
app/templates/: program.html
frontend/: index.html
frontend/css/: main.css
frontend/js/: admin.js  api.js  auth.js  review.js  router.js  submissions.js
frontend/pages/: admin.html  review.html  submissions.html
migrations/: env.py
migrations/versions/: 1186d865acf8_add_conferences.py  24cf112aebbe_add_validation_reports.py  3882a7392724_add_submission_files.py  73866d4e094c_seed_roles.py  79a9b3a8f2a9_seed_roles.py  96bb3849be95_add_section_to_submission_and_.py  d6d1f6d25483_add_submissions.py  e13b1a0bd560_initial_schema.py  f54fa48bf2ce_create_users_roles.py  fb7a8af544db_add_groups.py
tests/: conftest.py  test_auth.py  test_conferences.py  test_submissions.py
(+2 files in other folders)
